--- a/.github/workflows/generate-summaries.yml
+++ b/.github/workflows/generate-summaries.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
-
 jobs:
   summarize:
+    if: github.actor != 'github-actions'
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
