--- a/.github/workflows/generate-summaries.yml
+++ b/.github/workflows/generate-summaries.yml
@@ -4,10 +4,11 @@ permissions:
   contents: write
 
 on:
-  push:
-    branches: [ main ]
+  workflow_run:
+    workflows: ["Generate Atlases"]
+    types: [completed]
   workflow_dispatch:
-
+  
 jobs:
   summarize:
     if: github.actor != 'github-actions'
