--- a/.github/workflows/generate-atlas.yml
+++ b/.github/workflows/generate-atlas.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: "3.11"
 
       - name: Run atlas generator
-        run: python scripts/generate_atlas.py
+        run: python .github/scripts/generate_atlas.py
 
       - name: Commit changes
         run: |
